--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,23 @@
+# Part A - Traditional Deep Learning Models
 gensim==4.4.0
 h5py==3.15.1
+keras==3.12.0
+nltk==3.9.2
+tensorflow==2.20.0
+wordcloud==1.9.4
+
+# Part B - Transformer Models
+transformers==4.36.0
+torch==2.1.0
+datasets==2.16.0
+accelerate==0.25.0
+
+# Common Dependencies
 ipykernel==6.31.0
 jupyter==1.1.1
-keras==3.12.0
 matplotlib==3.10.6
-nltk==3.9.2
 numpy==2.2.5
 pandas==2.3.3
 scikit-learn==1.7.2
 scipy==1.15.3
 seaborn==0.13.2
-tensorflow==2.20.0
-wordcloud==1.9.4
